--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% load static %} <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -37,7 +37,7 @@
         </div>
     </div>
     
-    <script src="app.js"></script>
+    <script src="{% static 'results/app.js' %}"></script>
 
 </body>
 </html>
