--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     
-    <script src="{% static 'results/app.js' %}"></script>
+    <script src="{% static 'results/app.js' %}?v=1"></script>
 
 </body>
 </html>
