Add image display for Random Forest in index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,6 +38,9 @@
     </div>
     
     <script src="{% static 'results/app.js' %}?v=1"></script>
+    <div style="text-align: center; margin-top: 50px;">
+        <img src="{% static 'images/arbol.png' %}" alt="Random Forest" style="max-width: 100%; height: auto;">
+    </div>
 
 </body>
 </html>
