--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
     
     <script src="{% static 'results/app.js' %}?v=1"></script>
     <div style="text-align: center; margin-top: 50px;">
-        <img src="{% static 'images/arbol.png' %}" alt="Random Forest" style="max-width: 100%; height: auto;">
+        <img src="{% static 'results/images/arbol.png' %}" alt="Random Forest" style="max-width: 100%; height: auto;">
     </div>
 
 </body>
